<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="om.example.lapuile.wearsensor.HomeActivity">

    <item
        android:id="@+id/save_action"
        android:orderInCategory="103"
        android:title="@string/save"
        android:icon="@drawable/save"
        app:showAsAction="never"
        />

    <item android:id="@+id/menu_watch_image"

        android:icon="@drawable/watch_icon"
        android:visible="false"
        app:showAsAction="always"
        />
    <item android:id="@+id/menu_phone_image"

        android:icon="@drawable/ic_phone_android_black_24dp"
        android:visible="false"

        app:showAsAction="always"
        />

    <item
        android:id="@+id/info_action"
        android:orderInCategory="101"
        android:title="@string/info"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/settings_action"
        android:orderInCategory="102"
        android:title="@string/settings"
        app:showAsAction="never"
        />
</menu>