<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lapuile.wearsensor.SelectActivity"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/common_google_signin_btn_text_dark_focused">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <Button
                android:id="@+id/accelerometer_button"
                android:layout_width="344dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="@string/accelerometer_button_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/accelerometer_uncalibrated_button"
                android:layout_width="344dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="@string/accelerometer_uncalibrated_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />


            <Button
                android:id="@+id/gravity_button"
                android:layout_width="344dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="@string/gravity_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/gyroscope_button"
                android:layout_width="344dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="@string/gyroscope_button_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/gyroscope_uncalibrated_button"
                android:layout_width="344dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="@string/gyroscope_uncalibrated_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/rotation_vector_button"
                android:layout_width="344dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="rotation vector"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />


            <Button
                android:id="@+id/linear_acc_button"
                android:layout_width="344dp"
                android:layout_height="57dp"

                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="@string/linear_acceleration_button_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
            <Button
                android:id="@+id/step_counter_button"
                android:layout_width="344dp"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="@string/step_counter_button_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />




            <Button
                android:id="@+id/light_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="@string/light_button_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/ambient_temperature_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="@string/ambient_temperature_button_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/pressure_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="@string/pressure_button_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />


            <Button
                android:id="@+id/humidity_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="@string/relative_humidity_button_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />


            <Button
                android:id="@+id/temperature_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="Temperature"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />


            <Button
                android:id="@+id/magnetometer_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="@string/magnetometer_text"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/magnetometer_uncalibrated_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="magnetometer uncalibrated"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />


            <Button
                android:id="@+id/proximity_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="@string/proximity_text_button"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />


            <Button
                android:id="@+id/game_rotation_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="game rotation vector"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/orientation_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#006064"
                android:visibility="gone"
                android:text="orientation"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/geomagnetic_vector_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="geomagnetic vector"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/pose_6_dof_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                android:background="#006064"
                android:text="@string/pose_6_dof_text_button"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>

